// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider componentConfig.Pagination default 1`] = `
<div
  class="arco-pagination arco-pagination-size-default"
>
  <ul
    class="arco-pagination-list"
  >
    <li
      class="arco-pagination-item arco-pagination-item-prev arco-pagination-item-disabled"
    >
      <svg
        class="arco-icon arco-icon-left"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
        width="1em"
      >
        <path
          d="M32 8.4 16.444 23.956 32 39.513"
        />
      </svg>
    </li>
    <li
      class="arco-pagination-item arco-pagination-item-next arco-pagination-item-disabled"
    >
      <svg
        class="arco-icon arco-icon-right"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
        width="1em"
      >
        <path
          d="m16 39.513 15.556-15.557L16 8.4"
        />
      </svg>
    </li>
  </ul>
</div>
`;

exports[`ConfigProvider componentConfig.Pagination set className globally 1`] = `
<div
  class="arco-pagination arco-pagination-size-default global-default-class"
>
  <ul
    class="arco-pagination-list"
  >
    <li
      class="arco-pagination-item arco-pagination-item-prev arco-pagination-item-disabled"
    >
      <svg
        class="arco-icon arco-icon-left"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
        width="1em"
      >
        <path
          d="M32 8.4 16.444 23.956 32 39.513"
        />
      </svg>
    </li>
    <li
      class="arco-pagination-item arco-pagination-item-next arco-pagination-item-disabled"
    >
      <svg
        class="arco-icon arco-icon-right"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
        width="1em"
      >
        <path
          d="m16 39.513 15.556-15.557L16 8.4"
        />
      </svg>
    </li>
  </ul>
</div>
`;

exports[`ConfigProvider componentConfig.Pagination set className globally and component set className itself. 1`] = `
<div
  class="arco-pagination arco-pagination-size-default component-class"
>
  <ul
    class="arco-pagination-list"
  >
    <li
      class="arco-pagination-item arco-pagination-item-prev arco-pagination-item-disabled"
    >
      <svg
        class="arco-icon arco-icon-left"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
        width="1em"
      >
        <path
          d="M32 8.4 16.444 23.956 32 39.513"
        />
      </svg>
    </li>
    <li
      class="arco-pagination-item arco-pagination-item-next arco-pagination-item-disabled"
    >
      <svg
        class="arco-icon arco-icon-right"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
        width="1em"
      >
        <path
          d="m16 39.513 15.556-15.557L16 8.4"
        />
      </svg>
    </li>
  </ul>
</div>
`;
